[package]
name = "devicectrl-fan-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
crc = "3.3.0"
futures = "0.3.31"
hciraw = "1.0.1"
devicectrl-common = { git = "https://github.com/MatthewCash/devicectrl-common.git", features = [
    "alloc",
] }
log = "0.4.28"
p256 = "0.13.2"
sd-notify = "0.4.5"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
